Fix z-index order issue preventing link on logo

--- a/styles/components/siteHeader.less
+++ b/styles/components/siteHeader.less
@@ -15,7 +15,7 @@ body {
 	text-align: center;
 	background: @bg;
 	border-bottom: 1px solid @border;
-	z-index: 999;
+	z-index: 9999;
 }
 
 .siteHeader__logo {
